# UltraGent-Mcp

./: .agentignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  Dockerfile.runtime  README.md  agent_manager.py  architecture.mermaid  buggy_module.py  cortex.py  daemon.py  debug_gemini.py  debug_github.py  demo_neuro_capabilities.py  evolution.py  gemini_models.txt  git_senior_sync.py  hud_manager.py  infrastructure.py  librarian.py  main.py  mcp_server.py  mechanic.py  metrics.py  native_test.txt  neuro_architect.py  probe.py  pyproject.toml  router.py  scout.py  sentinel.py  setup_fs.py  start_daemon.bat  test_cloning_verification.py  test_git_output.txt  test_librarian_output.txt  test_models.py  test_placeholders.py  test_scout_output.txt  (+6 more)
.ai/: .gitignore  HUD.md  implementation_plan.md  memory.md  stack_profile.json  task.md  walkthrough.md
.ai/cortex/: weights.json
.ai/neuro/: neuro_map.html  neuro_state.json
.ai/reports/: audit_20260206_045756.json  audit_20260206_045823.json  audit_20260206_045912.json  audit_20260206_050044.json  audit_20260206_050145.json  audit_20260206_050238.json  audit_20260206_051952.json  audit_20260206_052107.json
.ai/swarm/: blackboard.json
logs/: deploy_verification.html
sandbox/: cleaner.py  debug_cortex.py  debug_evolution.py  debug_final_sf.py  debug_groq.py  debug_oh_agents.py  debug_scout.py  debug_siliconflow.py  debug_vision_v2.py  deep_inspect_oh.py  manual_audit.py  stress_test_sync.py  test_key_validity.py
skills/: architecture_template.mermaid  deep_engineering_protocol.md
tests/: test_buggy_module.py  test_cortex.py  test_daemon.py  test_evolution.py  test_git_senior_sync.py  test_hud_manager.py  test_infrastructure.py  test_librarian.py  test_main.py  test_mcp_server.py  test_mechanic.py  test_metrics.py  test_neuro_architect.py  test_probe.py  test_router.py  test_scout.py  test_sentinel.py  test_ultragent_loop.py
